# money3

./: .gitignore  README.md  api_server.py  backtest_test_main.py  bl_test_main.py  idea_think.md  json_main.py  main.py  pyproject.toml  requirements.txt
money3/: workflow.py
money3/backtest/: bt_test_main.py
money3/llm/: __init__.py  json_util.py  model.py
money3/opt/: __init__.py  bl_test_main.py  black_litterman.py  optimizer.py
src/backtest/: backtester.py
src/data/: __init__.py  client.py  data_providers.py  tingo.py
src/llm/: example.py  model.py
src/opt/: __init__.py  optimizer.py
static/: index.html
